Fix: text color was too light

--- a/src/style/Cash.css
+++ b/src/style/Cash.css
@@ -7,4 +7,5 @@
     border-radius: 4px;
     box-sizing: border-box;
     box-shadow: 1px 1px 1px 1px #ccc;
+    color: rgb(4, 4, 43);
 }
